finished backend implementation and started creating frontend requests
