# sports-store-api/app/Models/User.php
@@ -17,10 +17,13 @@ class User extends Authenticatable
      * @var array<int, string>
      */
     protected $fillable = [
-        'name',
+        'first_name',
+        'last_name',
         'email',
-        'password',
-        'email_verified',
+        'phone',
+        'text_alerts',
+        'email_alerts',
+        'password'
     ];
 
     /**
@@ -38,6 +41,7 @@ class User extends Authenticatable
      * @var array<string, string>
      */
     protected $casts = [
-        'email_verified' => 'boolean',
+        'text_alerts' => 'boolean',
+        'email_alerts' => 'boolean'
     ];
 }
